--- a/templates/computer_vision/upload_image.html
+++ b/templates/computer_vision/upload_image.html
@@ -7,11 +7,11 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="card card-upload" id="upload-card">
-                <i class="bi bi-upload"></i>
-                <span>Click or drag and drop to upload</span>
-                <input type="file" id="upload-input" style="display: none;">
-            </div>
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form }}
+                <button type="submit" class="btn btn-primary">Upload Image</button>
+            </form>
         </div>
     </div>
 </div>
