--- a/templates/_base.html
+++ b/templates/_base.html
@@ -34,6 +34,7 @@
           <li><a href="{% url 'face_recognition_app:upload_image' %}" class="nav-link px-2 link-secondary">Upload Attendance</a></li>
           <li><a href=" {% url "student_list" %} " class="nav-link px-2 link-dark">Search</a></li>
           <li><a href="{% url 'add_attendance' %}" class="nav-link px-2 btn link-danger">Add Attendance</a></li>
+          <li><a href="{% url 'export_attendance' %}" class="nav-link px-2 btn link-success">Export Attendance</a></li>
         </ul>
         <div class="dropdown text-end">
           {% if user.is_authenticated %}
